--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h2>THIS IS MY FIRST SERVER</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit commodi
+      nemo deleniti, sunt reiciendis accusantium voluptatum totam corrupti
+      veritatis! Quae vel porro voluptatum animi aperiam laboriosam, fuga
+      aspernatur optio nisi corporis quo, hic consequatur molestiae in eos
+      doloremque sint atque.
+    </p>
+  </body>
 </html>
